<resources>
    <string name="app_name">PDIoT App</string>
    <string name="ble_name">Name: %1$s</string>
    <string name="ble_mac">MAC: %1$s</string>
    <string name="ble_signal">Signal: %1$d</string>
    <string name="ble_uuid">UUID: %1$s</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_fab_animations">FAB Animation</string>
    <string name="title_activity_toolbar_test">ToolbarTestActivity</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_animate_toolbar">Animate Toolbar</string>
    <string name="title_activity_tab_animation">Tabs Animation</string>
    <string name="title_activity_sticky_view">StickyViewActivity</string>

    <string name="section_bluetooth">Welcome to the PDIoT App. Use it to connect to any Respeck device by
        scanning the QR code on the back of the device.</string>
    <string name="section_record">You can record data from the sensor in a locally stored csv file.</string>
    <string name="section_live">You can also view the live data once the sensor is connected and see live predictions of the installed model.</string>
    <string name="section_bluetooth_title">Connect</string>
    <string name="section_record_title">Record</string>
    <string name="section_live_title">View</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_swipe_refresh">Swipe Refresh</string>
    <string name="title_activity_mini_drawer">Mini Drawer</string>
    <string name="title_activity_nested_toolbar">Nested Toolbar</string>
    <string name="action_search">Search</string>
    <string name="action_view_module">View</string>
    <string name="title_quick_return">Quick Return</string>
    <string name="title_activity_reveal">Reveal Animation</string>
    <string name="title_activity_reveal_animation">Reveal Animation</string>
    <string name="title_activity_launch_screen">LaunchScreenActivity</string>
    <string name="title_activity_gmail_style">Gmail List</string>
    <string name="title_activity_tabs_header">Header Tabs</string>
    <string name="title_activity_pager">PagerActivity</string>
    <string name="section_format">Page %1$d</string>
    <string name="action_add">Add</string>
    <string name="android_desserts">Android Desserts</string>

    <!-- Extracted string resources   -->
    <string name="test_your_models_with_the_live_app">Test your models with the live app!</string>
    <string name="accel_x">accel_x</string>
    <string name="accel_y">accel_y</string>
    <string name="accel_z">accel_z</string>
    <string name="accel_mag">mag</string>
    <string name="s_eq_4f">%s = %.4f</string>
    <string name="model_prediction">Model prediction</string>
    <string name="ellipsis">&#x2026;</string>
    <string name="n_data_points">%1$d data points</string>
    <string name="data_points">… data points</string>
    <string name="tfe_dc_classification_error_message">Error classifying activity: %s</string>
    <string name="live">Live</string>
    <string name="record">Record</string>
    <string name="timeline">Timeline</string>
    <string name="activities">Activities</string>
    <string name="categories">Categories</string>
    <string name="low_activity">Low activity</string>
    <string name="medium_activity">Medium activity</string>
    <string name="high_activity">High activity</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="intense">Intense</string>
    <string name="today">Today</string>
    <string name="activity_level">Activity level</string>
    <string name="activity_level_today">Activity level today</string>
    <string name="time_spent_per_category">Time spent per category</string>

    <!-- Notifications   -->
    <string name="time_for_a_break">Time for a break!</string>
    <string name="sitting_activity_description">You\'ve been sitting for a while… Take a break to stretch!</string>
    <string name="almost_there">Almost there!</string>
    <string name="movement_activity_description">Good work! Keep moving to reach your activity target!</string>
    <string name="awesome_moves">Awesome moves!</string>
    <string name="goal_reached_activity_description">Go you! You\'ve reached your daily activity target! Remember to stay hydrated!</string>
    <string name="on_device_prediction">On-device prediction</string>
    <string name="network_prediction">Network prediction</string>
    <string name="activity">Activity</string>
</resources>
